--- a/TEAM PROJECT/Project/MVCBlog/MVCBlog/MVCBlog/Views/Home/Ranking.cshtml
+++ b/TEAM PROJECT/Project/MVCBlog/MVCBlog/MVCBlog/Views/Home/Ranking.cshtml
@@ -1,33 +1,33 @@
-
+﻿
 @{
     ViewBag.Title = "Класиране по медали";
 }
 <body class="body-posts">
     <h2>Класиране по медали</h2>
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Table Niki</title>
-  <link rel="stylesheet" href="css/style.css">
-  <link href="~/Content/Site.css" rel="stylesheet" /> 
-<style>
-table {
-    font-family: arial, sans-serif;
-    border-collapse: collapse;
-    width: 100%;
-}
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Table Niki</title>
+        <link rel="stylesheet" href="css/style.css">
+        <link href="~/Content/Site.css" rel="stylesheet" />
+        <style>
+            table {
+                font-family: arial, sans-serif;
+                border-collapse: collapse;
+                width: 100%;
+            }
 
-td, th {
-    border: 1px solid #dddddd;
-    text-align: left;
-    padding: 8px;
-}
+            td, th {
+                border: 1px solid #dddddd;
+                text-align: left;
+                padding: 8px;
+            }
 
-tr:nth-child(even) {
-    background-color: #dddddd;
-}
-</style>
-</head>
+            tr:nth-child(even) {
+                background-color: #dddddd;
+            }
+        </style>
+    </head>
     <body>
 
         <table>
@@ -109,38 +109,38 @@ tr:nth-child(even) {
                 <td>29</td>
             </tr>
 
-
         </table>
 
         <div class="row">
             <div class="post col-md-6">
                 <img src="http://ssl.gstatic.com/onebox/media/olympics/photos/o16/live/MTZSPDEC8MBLXIME_768x432.JPG" alt="Rio 2016">
 
-                <div>
-                    <h1>
-                        Юсейн Болт спечели осмото си олимпийско злато след победа и на 200 м в Рио
-                    </h1>
+                <div class="row">
+                    <div class="post col-md-6">
+                        <div>
+                            <h1>
+                                Юсейн Болт спечели осмото си олимпийско злато след победа и на 200 м в Рио
+                            </h1>
 
-<<<<<<< HEAD
-</body>
->>>>>>> 81ad88ed1383c38dd4ee4eb96442471eba71317c
-=======
-                    <p>
-                        Звездата на световната атлетика Юсейн Болт спечели осмия си златен медал от олимпийски игри. Ямаецът стъпи на върха и на 200 м в Рио де Жанейро.
-                    </p>
-                    <p>
-                        Той направи поредното си силно бягане и триумфира убедително, като завърши за 19,78 сек.
-                    </p>
-                    <p>
-                        Болт вече взе златото на 100 м в Рио. На игрите в Пекин 2008 и Лондон 2012 той стана шампион на 100 м, 200 м и на 4х100. Световният рекордьор в спринтовите дисциплини се вложи в търсенето на по-добър резултат, но остана далеч от собствените си върхови постижения - световния рекорд 19,19 сек и олимпийския 19,30 сек.
-                    </p>
-                    <p>
-                        Болт беше посрещнат и изпратен като герой. Дълго след края на финала публиката скандираше името му.
-                    </p>
-                    <p></p>
-                    <p></p>
+
+
+                            <p>
+                                Звездата на световната атлетика Юсейн Болт спечели осмия си златен медал от олимпийски игри. Ямаецът стъпи на върха и на 200 м в Рио де Жанейро.
+                            </p>
+                            <p>
+                                Той направи поредното си силно бягане и триумфира убедително, като завърши за 19,78 сек.
+                            </p>
+                            <p>
+                                Болт вече взе златото на 100 м в Рио. На игрите в Пекин 2008 и Лондон 2012 той стана шампион на 100 м, 200 м и на 4х100. Световният рекордьор в спринтовите дисциплини се вложи в търсенето на по-добър резултат, но остана далеч от собствените си върхови постижения - световния рекорд 19,19 сек и олимпийския 19,30 сек.
+                            </p>
+                            <p>
+                                Болт беше посрещнат и изпратен като герой. Дълго след края на финала публиката скандираше името му.
+                            </p>
+                            <p></p>
+                            <p></p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </body>
->>>>>>> origin/master
