--- a/TEAM PROJECT/Project/MVCBlog/MVCBlog/MVCBlog/Views/Home/Preparation.cshtml
+++ b/TEAM PROJECT/Project/MVCBlog/MVCBlog/MVCBlog/Views/Home/Preparation.cshtml
@@ -5,64 +5,48 @@
 <div class="row preparation-content">
     <div class="post col-md-4">
         <div class="preparation-text-content">
-            <h2>Political turmoil</h2>
+            <h2>Политически сътресения</h2>
             <div>
                 <p>
-                    Brazil’s congress voted last Sunday to impeach the president, Dilma Rousseff, on allegations that she manipulated government accounts before her re-election in 2014. Rousseff – who lost the vote against her by 367 to 137 – could be forced to step aside for 180 days, although she has denounced the impeachment to the United Nations and many Brazilian politicians have also been implicated in a corruption scandal involving the part-state-owned oil company Petrobras.
-                    It is against this turbulent backdrop that the 2016 Olympics will take place, two years after Brazil hosted a World Cup marred by protests in numerous cities against stadium costs, corruption and the eviction of people from their favela homes. Brazil’s economy is in a torrid state and in the grip of a serious recession, with GDP having shrunk significantly and millions of people taking to the street in recent weeks to protest against the government. Deaths on collapsed Rio de Janeiro bike path deal safety blow to Olympic host Read more.
+                    Бразилският конгрес гласува миналата неделя за импийчмънт на президента, Дилма Русеф, по обвинения, че тя манипулирани държавни сметки, преди да й бъде преизбран през 2014 г. Русеф - който загуби вота срещу нея от 367 до 137 - може да бъде принуден да се оттегли в продължение на 180 дни , въпреки че тя е денонсиран импийчмънт на Организацията на обединените нации и много бразилски политици също са били замесени в корупционен скандал с участието на месечната държавна петролна компания Petrobras. Именно на този бурен фон, които ще се проведат Олимпийските игри през 2016 г., две години след като Бразилия бе домакин на Световната купа помрачена от протести в редица градове срещу стадион разходи, корупцията и извеждането на хората от техните Фавела домове. Икономиката на Бразилия е в горещ състояние и в хватката на сериозна рецесия, с БВП като свил значително и милиони хора, които приемат на улицата през последните седмици, за да протестират срещу правителството. Смъртните случаи по срина Рио де Жанейро велосипед пътя удар безопасността сделка за олимпийски домакин.
                 </p>
             </div>
             <hr/>
-            <h2>Infrastructure race</h2>
+            <h2>Проблеми с инфраструктурата</h2>
             <div>
                 <p>
-                    Against this troubled backdrop Olympic preparations are still progressing as Brazil desperately
-                    attempts to ensure that all venues and transport links are completed before the opening ceremony
-                    at the Maracanã stadium, on 5 August. Of major concern has been the metro extension intended to connect
-                    the Olympic Park in Barra de Tijuca with the rest of the city. It has not been finished,
-                    although officials claim it will be ready for the completion deadline on 1 July and will
-                    transport more than 300,000 people each day and significantly alleviate traffic problems in Rio.
-                    On Thursday an elevated cycle path over the sea, built for the Games at a cost of £8m, collapsed
-                    and killed at least two people, with the cause unknown. However, the president of the organising
-                    committee, Carlos Nuzman, has previously maintained that the country will deliver a “spectacular Games”
-                    and that the political and economic woe will not affect the event. According to the city’s website,
-                    the velodrome is only 83% completed because of probleмs in laying the track, while the tennis centre
-                    is 90% ready. The overwhelming majority of venues, though, are on course.
+                    На този проблемен фон Олимпийските организатори все още напредват, като Бразилия отчаяно се опитва да се гарантира, че всички места и транспортни връзки са завършени преди церемонията по откриването на стадион Маракана, на 5 август. От основна грижа е била за разширение на метрото, предназначен за свързване на олимпийския парк в Barra де Тижука с останалата част на града. Той не е завършен, въпреки че служители твърдят, че той ще бъде готов за крайния срок за завършване на 1 юли и ще транспортира повече от 300,000 души всеки ден и значително облекчаване на проблемите с трафика в Рио. В четвъртък повишена велоалея над морето, построен за игрите на цена от £ осем метра, се срути и уби най-малко двама души, с причината е неизвестна. Въпреки това, президентът на организационния комитет, Carlos Nuzman, поддържа по-рано, че страната ще изнесе "зрелищни игри" и че политическата и икономическата горкото няма да се отрази събитието. Според уебсайта на града, на Велодром е само 83% завършена, защото на probleмs в полагане на пистата, а центъра на тенис е 90% готов. По-голямата част от местата, обаче, са на път.
                 </p>
             </div>
             <hr/>
-            <h2>Zika concerns</h2>
+            <h2>Вирусът Зика</h2>
             <div>
                 <p>
-                    The mosquito-borne virus that has spread across many countries in South and Central America has caused serious concern in Brazil. British athletes preparing to compete at the Games have been issued with guidance on dangers and prevention. There is no vaccination for Zika, which can lead to babies being born with underdeveloped brains, and the World Health Organisation has declared the outbreak a global public health emergency with an estimated 1.5 million people infected.
-                    However, the International Olympic Committee is confident that the Games will not be affected by the virus and organisers are hopeful that the dryer, cooler climate in August – Brazil’s winter – will help ease the problem. Officials say stagnant water at venues is being drained and that possible mosquito breeding grounds will be eliminated by medical experts. It remains to be seen if any athletes deem the situation so serious in the coming months that they decide not to compete. Rio 2016 Olympic flame is lit at temple of Hera in Greece.
+                    Вирусът пренасян от комари се е разпространил в много страни в Южна и Централна Америка и е причина за сериозна загриженост в Бразилия. Британските спортисти се подготвят да се състезават на Игрите са издадени с указания за опасности и превенция. Не е ваксинация за Жика, което може да доведе до бебета се раждат с недоразвити мозъци, и на Световната здравна организация е обявила избухването на глобалната общественото здраве аварийно с прогнозна 1,5 милиона души, заразени. Въпреки това, на Международния олимпийски комитет е уверен, че Игрите, няма да бъдат засегнати от вируса и организаторите се надяват, че сушилнята, охладител климат през август - Бразилия зимата - ще спомогне за облекчаване на проблема. Властите твърдят, застояла вода на места се оттича и че е възможно комари основания за разплод, ще бъдат елиминирани от медицински експерти. Остава да се види дали всички спортисти преценят ситуацията така сериозно през следващите месеци, че те не решат да се конкурират. Рио 2016 олимпийския пламък свети в храма на Хера в Гърция.
                 </p>
             </div>
         </div>
     </div>
     <div class="post col-md-4">
         <div class="preparation-text-content">
-            <h2>Pollution at sailing venue</h2>
+            <h2>Замърсяване на водите</h2>
             <div>
                 <p>
-                    Arguably of more concern for some competitors will be the water pollution at Guanabara Bay, where the sailing events will be held. The bay is overlooked by Rio’s Sugarloaf Mountain and Christ the Redeemer statue which will undoubtedly provide an impressive backdrop for the cameras and spectators, but for a number of years the bay is where much of the city’s sewage and rubbish has been dumped. The former chief executive of World Sailing, Peter Sowrey, claims he was fired after trying to move Olympic sailing to Búzios, a coastal resort about 100 miles from Rio, because of the pollution, saying he was “told to gag myself on the subject”.
-                    When Rio won the right to stage the Games, it pledged to clean up its waterways but independent testing of locations where sailing, rowing, canoeing and open-water swimming will be held show the presence of disease-causing viruses at levels thousands of times above what would be acceptable in European or United States waters.
+                    Може да се каже на повече загриженост за някои конкуренти ще бъде замърсяването на водите в залива Гуанабара, където ще се проведе събития състезателните. Заливът е пренебрегван от Захарната глава и Христос в Рио Изкупителя статуя, която несъмнено ще осигури впечатляващ фон за камерите и зрителите, но в продължение на няколко години заливът е, когато голяма част от канализацията и боклука на града са изхвърлени. Бившият изпълнителен директор на Световната ветроходство, Peter Sowrey, твърди той беше уволнен, след като се опитва да се движи олимпийски ветроходни да Búzios, крайбрежен курорт на около 100 мили от Рио, заради замърсяването, като каза, че е "казал да си запуши устата на тема" , Когато Рио спечели правото да организира Игрите, той обеща да почисти своите пътища, но независимо тестване на местата, където ще се проведе ветроходство, гребане, кану-каяк и плуване в открити води, показват наличие на вируси, причиняващи заболяване на нива, хиляди пъти по-горе това, което би било приемливо в европейските или американските води.
                 </p>
             </div>
             <hr/>
-            <h2>Ticket sales and local apathy</h2>
+            <h2>Продажба на билети</h2>
             <div>
                 <p>
-                    Advertisement Around half of the 7.5m Olympic tickets remain unsold, with the Paralympic Games sales having barely got off the ground. The Zika virus could be a factor in the low level of foreign purchases but a major issue has been domestic apathy. At the beginning of April the new Brazilian sports minister, Ricardo Leyser, was quoted as saying “there is a perception that the Brazilian population has not yet woken up for the Games”, amid suggestions that tickets could be given to school children in an effort to ensure venues are full.
-                    Olympic ticket prices range from 40 Brazilian reais (£8) to 4,600 reais (£907), while officials say that Brazilians usually purchase tickets at the last minute and that there will be a late uptake in sales. There has not been the same level of protests as witnessed before the 2014 World Cup but it is fair to say that the Games do not have total support from Brazilians. Evicted residents from the Vila Autódromo favela – making way for the Olympic Park – protested in the streets, while the decision to build the golf course on an Area of Environmental Protection angered local campaigners.
+                    Около половината от Олимпийските билети - 7,5 милиона остават непродадени, с продажбите на параолимпийските игри, които имат едва слязоха на земята. Вирусът Жика може да бъде фактор в ниското ниво на чуждестранни покупки, но основен проблем е вътрешното апатия. В началото на месец април на новия бразилски спортен министър, Рикардо Leyser, бе цитиран да казва "съществува усещането, че на бразилската популация все още не е събудил за игрите", на фона на предположенията, че билети могат да бъдат дадени на децата в училище в опит за да се осигури места са пълни. Олимпийските цените на билетите варират от 40 бразилски реала (£ 8) до 4600 реала (£ 907), докато служители казват че бразилците обикновено купуват билети в последния момент и че няма да има закъсняло поемане на продажбите. Не е имало същото ниво на протести като свидетел преди Мондиал 2014, но е справедливо да се каже, че Игрите не разполагат с обща подкрепа от бразилците. Изгонени жители от Vila Autodromo фавела на - вземане на пътя за Олимпийския парк - протестираха по улиците, докато решението за изграждане на голф игрище на площ от опазване на околната среда разгневи местните активисти.
                 </p>
             </div>
             <hr/>
-            <h2>Russia’s athletics ban</h2>
+            <h2>Състезателите на Русия</h2>
             <div>
                 <p>
-                    Away from the domestic troubles, the most intriguing element of the Olympic build-up centres on Russia’s disgraced athletes. An independent report commissioned by the World Anti-Doping Agency (Wada) last year found the country guilty of running a state-sponsored doping programme, resulting in Russian athletes being banned from all international competition by the IAAF in November. It sent a seismic shock wave through the sport that is the Olympic’s blue riband event.
-                    Last week Russia announced planned reforms to restore the credibility of its anti-doping system but continues to send out mixed messages. Yesterday its sports minister Vitaly Mutko told Germany’s Der Spiegel that Russia has “done everything” to be reinstated, adding: “Our athletes have the moral right to be in Rio.” A decision on whether to reinstate Russian athletes before the Olympics will be made in Vienna on 17 June by an IAAF taskforce led by the former Wada director Rune Andersen. It will be a huge moment for the IAAF president, Sebastian Coe, and for the sport as a whole. Allowing Russia back in could see the credibility of the Games suffer, yet upholding the ban would cause major political ructions.
+                    Далеч от вътрешните проблеми, най-интригуващ елемент на Олимпийските застроени центрове на опозорен спортисти на Русия. Един независим доклад, поръчан от Световната антидопингова агенция (WADA) миналата година установи, страната виновен за изпълнение на програма, спонсорирана от държава допинг, в резултат на руските атлети са били забранени от всички международна конкуренция от страна на ИААФ през ноември. Той изпрати сеизмична вълна шок чрез спорт, който е син панделка събитие олимпийските си. Миналата седмица Русия обяви планирани реформи, за да се възстанови доверието на своята антидопингова система, но продължава да изпраща смесени послания. Вчера своя министър на спорта Виталий Мутко каза германският Der Spiegel, че Русия е "направил всичко", за да бъде възстановен, като добави: "Нашите спортисти имат моралното право да бъде в Рио." Решението дали да възстанови руските спортисти, преди да бъдат направени на Олимпиадата във Виена на 17 юни от работна група IAAF, водена от бившия директор Уада Rune Андерсен. Това ще бъде огромен момент за президент на ИААФ, Себастиан Коу, и за спорта като цяло. Разрешаването на Русия обратно в виждах доверието на Игрите страдат, все още държейки забраната ще доведе до големи политически препирни.
                 </p>
             </div>
         </div>
