Preparatin page changes

--- a/TEAM PROJECT/Project/MVCBlog/MVCBlog/MVCBlog/Content/preparation.css
+++ b/TEAM PROJECT/Project/MVCBlog/MVCBlog/MVCBlog/Content/preparation.css
@@ -3,7 +3,9 @@
     margin-bottom: 29px;
 }
 .preparation-text-content {
-    background-color: #66ff66;
+    background-color: #F1F6B7;
+    padding-left: 15px;
+    padding-right: 15px;
 }
 .preparation-content {
     padding: 10px;
