--- a/TEAM PROJECT/Project/MVCBlog/MVCBlog/MVCBlog/Views/Home/Preparation.cshtml
+++ b/TEAM PROJECT/Project/MVCBlog/MVCBlog/MVCBlog/Views/Home/Preparation.cshtml
@@ -5,64 +5,115 @@
 <div class="row preparation-content">
     <div class="col-md-4">
         <div class="preparation-text-content">
-            <h2>Political turmoil</h2>
+            <h2>Политически сътресения</h2>
             <div>
                 <p>
-                    Brazil’s congress voted last Sunday to impeach the president, Dilma Rousseff, on allegations that she manipulated government accounts before her re-election in 2014. Rousseff – who lost the vote against her by 367 to 137 – could be forced to step aside for 180 days, although she has denounced the impeachment to the United Nations and many Brazilian politicians have also been implicated in a corruption scandal involving the part-state-owned oil company Petrobras.
-                    It is against this turbulent backdrop that the 2016 Olympics will take place, two years after Brazil hosted a World Cup marred by protests in numerous cities against stadium costs, corruption and the eviction of people from their favela homes. Brazil’s economy is in a torrid state and in the grip of a serious recession, with GDP having shrunk significantly and millions of people taking to the street in recent weeks to protest against the government. Deaths on collapsed Rio de Janeiro bike path deal safety blow to Olympic host Read more.
+                    Бразилският конгрес е гласувал импинджмънт на бразилския президент, Дилма Русеф, с обвинения,
+                    че е манипулирала правителствени сметки преди преизбирането й през 2014г. Русеф, кояо загубва
+                    вотът срещу нея с 367 на 137 е можело да бъде накаране да отсъпи от политическите си задължения
+                    за 180 дена, макар, че е денонсирала импинджмънта пред Обединените Нации и много бразилски политици
+                    също са били обвинени в корупционни скандали с частично държавно притежаваната петролна компания
+                    „Петробрас“. Именно на този урболентен фон ще се състоят Олимпийските игри през 2016, две години
+                    след като бразилия е домакин на Световното първенство по футбол, което пък беше белязано с протести в
+                    много градове срещу разходите по строителството на стадионите, корупция и изгонването на хора от техните
+                    домове. Бразилската икономика е в лошо състояние и в хватката на сериозна рецесия с брутен вътрешен
+                    продукт, който се е смалил значително, непосредствено преди олимпиадата милиони хора са излезнали да
+                    протестират по улиците срещу правителстото. Смъртните случаи причинени от пропадането на колоездната
+                    алея в Рио де Женейра е още един шрапнел в лицето на олимпииския домакин засягайски безопасността около
+                    олимпиадата.
                 </p>
             </div>
             <hr/>
-            <h2>Infrastructure race</h2>
+            <h2>Инфраструктурна надпревара</h2>
             <div>
                 <p>
-                    Against this troubled backdrop Olympic preparations are still progressing as Brazil desperately
-                    attempts to ensure that all venues and transport links are completed before the opening ceremony
-                    at the Maracanã stadium, on 5 August. Of major concern has been the metro extension intended to connect
-                    the Olympic Park in Barra de Tijuca with the rest of the city. It has not been finished,
-                    although officials claim it will be ready for the completion deadline on 1 July and will
-                    transport more than 300,000 people each day and significantly alleviate traffic problems in Rio.
-                    On Thursday an elevated cycle path over the sea, built for the Games at a cost of £8m, collapsed
-                    and killed at least two people, with the cause unknown. However, the president of the organising
-                    committee, Carlos Nuzman, has previously maintained that the country will deliver a “spectacular Games”
-                    and that the political and economic woe will not affect the event. According to the city’s website,
-                    the velodrome is only 83% completed because of probleмs in laying the track, while the tennis centre
-                    is 90% ready. The overwhelming majority of venues, though, are on course.
+                    На фона на останалите политически и икономически проблеми бразилските приготовления за олимпиадата продължавали
+                    докато Бразилия прави отчаяни опити да подсигури всички спортни съоръжения и транспортни връзки и да бъдат довършени
+                    преди церемонията по откриването на стадион Маракана на 5-ти август. Основна грижа е било удължаването на метрото,
+                    което трябва да свърже Олимпийския Парк в Бара де Тихука с останалата част на града. Удължаването на метрото е било
+                    далеч от довършено, макара и властите да са твърдяли, че ще ще бъде готово до крания срок 1-и юли и, че ще транспортира
+                    повече от 300,000 човека на ден, което пък значително е повишило проблема с трафика в Рио. Колоезден път преминаващ над
+                    морето построен за игрите на стойност £8м се срутва без видима причина и убива поне 2-ма диши. Въпреки това президентът
+                    на организационния комитет, Карлос Нузман, твърди, че страната ще осигури зрелищни игри и, че политическата и
+                    икономическа рана няма да се отрази на събитието. Според уеб страницата на града велодрома е само на 83% завършен
+                    заради проблеми с полагането на трасето, докато тенис центъра е на 90% завършен. Въпреки това по-голямвата част
+                    на спортните съоръжения са били на път на бъдата довършени на 100%.
                 </p>
             </div>
             <hr/>
-            <h2>Zika concerns</h2>
+            <h2>Притеснения около вирусът Зика</h2>
             <div>
                 <p>
-                    The mosquito-borne virus that has spread across many countries in South and Central America has caused serious concern in Brazil. British athletes preparing to compete at the Games have been issued with guidance on dangers and prevention. There is no vaccination for Zika, which can lead to babies being born with underdeveloped brains, and the World Health Organisation has declared the outbreak a global public health emergency with an estimated 1.5 million people infected.
-                    However, the International Olympic Committee is confident that the Games will not be affected by the virus and organisers are hopeful that the dryer, cooler climate in August – Brazil’s winter – will help ease the problem. Officials say stagnant water at venues is being drained and that possible mosquito breeding grounds will be eliminated by medical experts. It remains to be seen if any athletes deem the situation so serious in the coming months that they decide not to compete. Rio 2016 Olympic flame is lit at temple of Hera in Greece.
+                    Вирусът, който се пренася от комари, и който се е пренесъл в много държави в Южна и Централна Америка е
+                    предизвикал сериозни опасения в Бразилия. Британските атлети, които са се готвели да се състезават са в
+                    игрите са получили насоки и указания за опасностите и тяхното възпрепятстване. ЗА вирусът Зика ваксинации
+                    няма, кото може да доведе до бебета да бъдат родени с недоразвито мозъчно вещество и Световната Здравна
+                    Организация е обявила налагането на извънредна ситуация на световно ниво с прогнозирани 1.5 милиона заразени души.
+                    Въпреки това Международният Олимпийски комитет е убеден, че игрите няма да бъдат засегнати от виуса и организаторите
+                    се надяват, че по-сухият и студен климат през август (Бразилската зима) ще спомогне за улесненото решение на проблема.
+                    Официалните власти твърдят, че нетечащата вода около спортните съоръжения е източена и, че възможните места за
+                    разъждането на комари ще бъдат елиминирани от медицински екперти. Предстои да видим дали някои атлети ще счетат
+                    ситуацията за толкова сериозна, че през идните месеци, че щерешат да не се състезават.
                 </p>
             </div>
         </div>
     </div>
     <div class="col-md-4">
         <div class="preparation-text-content">
-            <h2>Pollution at sailing venue</h2>
+            <h2>Замърсяване във водните спортни съоръжения</h2>
             <div>
                 <p>
-                    Arguably of more concern for some competitors will be the water pollution at Guanabara Bay, where the sailing events will be held. The bay is overlooked by Rio’s Sugarloaf Mountain and Christ the Redeemer statue which will undoubtedly provide an impressive backdrop for the cameras and spectators, but for a number of years the bay is where much of the city’s sewage and rubbish has been dumped. The former chief executive of World Sailing, Peter Sowrey, claims he was fired after trying to move Olympic sailing to Búzios, a coastal resort about 100 miles from Rio, because of the pollution, saying he was “told to gag myself on the subject”.
-                    When Rio won the right to stage the Games, it pledged to clean up its waterways but independent testing of locations where sailing, rowing, canoeing and open-water swimming will be held show the presence of disease-causing viruses at levels thousands of times above what would be acceptable in European or United States waters.
+                    За момента от по-голямо притеснение за някои участици ще бъде замърсяването на водат в
+                    заливът Гуанабара където ще се състоят плавателните съзтезания на олимпиадата. Към заливът
+                    гледа планината Шугърлоф и Статуята на Христос Спасителя, което без съмнение допринася
+                    за впечатляващ фон за камерите и публиката, но от редица година заливът е мястото където
+                    по-голямата част от градската канализация се изсипва и се изспва боклук. Бившият прецедал
+                    на Световната Федерация по Плаване, Питър Соулри, твърди, ч е ебил уволнен след като се е
+                    опитал да премести олимпийското плаване в Бузиос, моркси курорт на около 100 мили от Рио,
+                    заради замърсяването, казвайки, че „да замъляи относно темата“. Когато Рио печели правото
+                    да приеме Олимпийските Игри се наемада почисти водните си пътища, но независимо изследване
+                    на местата където ще се състои плавани, гребани, кану-каяк и плуване в отворени води показва
+                    наличието на болестотворни вируси в хиляди пъти над приемливото ниво в Европейските води и
+                    водите на САЩ.
                 </p>
             </div>
             <hr/>
-            <h2>Ticket sales and local apathy</h2>
+            <h2>Продажби на билети и местна апатия</h2>
             <div>
                 <p>
-                    Advertisement Around half of the 7.5m Olympic tickets remain unsold, with the Paralympic Games sales having barely got off the ground. The Zika virus could be a factor in the low level of foreign purchases but a major issue has been domestic apathy. At the beginning of April the new Brazilian sports minister, Ricardo Leyser, was quoted as saying “there is a perception that the Brazilian population has not yet woken up for the Games”, amid suggestions that tickets could be given to school children in an effort to ensure venues are full.
-                    Olympic ticket prices range from 40 Brazilian reais (£8) to 4,600 reais (£907), while officials say that Brazilians usually purchase tickets at the last minute and that there will be a late uptake in sales. There has not been the same level of protests as witnessed before the 2014 World Cup but it is fair to say that the Games do not have total support from Brazilians. Evicted residents from the Vila Autódromo favela – making way for the Olympic Park – protested in the streets, while the decision to build the golf course on an Area of Environmental Protection angered local campaigners.
+                    7.5 милиона от олимпийките билети остават непродадени като от тези за параолимпийските игри почти
+                    нищо не е продадено. Вирусът Зика може да е фактор в ниското ниво на закупени билети от чужденци,
+                    но основен проблем е местната апатия. В началото на април новото бразилски спортен министър,
+                    Рикардо Лейсер, се изказва, че „за момента все още е възприето, че бразилското население все още
+                    не се е събудило за Игрите“, докато има преложение, че билети могат да се дават на ученици в опит
+                    да се осигуро запълването на спортните съоръжения. Цената на един билет за Олимпийските игри варира
+                    между 40 бразилски реала (8 паунда) до 4,600 реала (907 паинда), докато експерти казват, че бразилците
+                    обикновено купуват билети в последната минута и, че ще има закъснял пик в купуването на билети. Не е
+                    имало толкова много протести колкото е наблюдавано преди Световното първенство по футбол през 2014,
+                    но може да се каже, че Игрите нямат абсолютната подкрепа на бразилците. Изгонените живущи от Вила
+                    Аутодромо Фавела, за да бъде направено място за Олимпийския парк, са протестирали по улиците, докато
+                    друг случай на взимане на решение да бъде построено голфигрище на природно защитено място е вбесило
+                    местните включени в кампанията.
                 </p>
             </div>
             <hr/>
-            <h2>Russia’s athletics ban</h2>
+            <h2>Забраната наложени над руските атлети</h2>
             <div>
                 <p>
-                    Away from the domestic troubles, the most intriguing element of the Olympic build-up centres on Russia’s disgraced athletes. An independent report commissioned by the World Anti-Doping Agency (Wada) last year found the country guilty of running a state-sponsored doping programme, resulting in Russian athletes being banned from all international competition by the IAAF in November. It sent a seismic shock wave through the sport that is the Olympic’s blue riband event.
-                    Last week Russia announced planned reforms to restore the credibility of its anti-doping system but continues to send out mixed messages. Yesterday its sports minister Vitaly Mutko told Germany’s Der Spiegel that Russia has “done everything” to be reinstated, adding: “Our athletes have the moral right to be in Rio.” A decision on whether to reinstate Russian athletes before the Olympics will be made in Vienna on 17 June by an IAAF taskforce led by the former Wada director Rune Andersen. It will be a huge moment for the IAAF president, Sebastian Coe, and for the sport as a whole. Allowing Russia back in could see the credibility of the Games suffer, yet upholding the ban would cause major political ructions.
+                    Далеч от местните бразилски проблеми най-интригуващия елемент от натрупаното напрежение около
+                    руските опозорени ателти. Независим отечет на Световната Анти-допингова агенция миналата година
+                    е обвинила Русия в провеждането на държавно финансирана допингова програма, заради която на всички
+                    руски атлети им е било забранено да участват в всякакви международни състезания считано от Ноември
+                    миналата година. Това опраща сеизмична вълна в спортното пространство. Русия е анонсирала, че
+                    планира реформи да възстанови правдоподобността на нейната анти допингова система, но продължава
+                    да изпраща смесени сигнали. Руският министър на спорта Витали Мутко казва на германския вестник
+                    „Дер Шигел“, че Русия е „направила всичко“ да бъде възстановено доверието, като добавя: „Нашите
+                    атлети имат моралното право да бъдат в Рио“. Решението за това дали да възстановено доверието
+                    към руските атлети преди Олимпийските игри е направено във Виена на 17юни от Международната
+                    Асоцияция на Федерациите по Атлетика (МАФА) воден от бившия директо на Световната Анти-допингова
+                    Организация Руне Андерсен. Това е било голям момент за Себастиен Ко и за спорта като цяло. Да се
+                    допусне Русия обратно може да да нарани правдоподобността на Игрите, но въпреки това ако се остави
+                    забраната може да има големи политическиреакции.
                 </p>
             </div>
         </div>
